Fix background of page being too large.
git-svn-id: https://devel.nmrbox.org/svn/nmrbox/trunk/web@7714 33504fd2-e2af-4168-9044-610c50ee6ce2

--- a/newweb/nmrbox/src/custom-theme.scss
+++ b/newweb/nmrbox/src/custom-theme.scss
@@ -45,9 +45,12 @@ $nmrbox-app-theme: mat-light-theme($nmrbox-app-primary, $nmrbox-app-accent, $nmr
 */
 @include angular-material-theme($nmrbox-app-theme);
 
-body {
+html,body
+{
+  width: 100%;
   height: 100%;
   margin: 0px;
+  padding: 0px;
   overflow-x: hidden;
 }
 
